Fix white space on the outer part

--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@
 
 *{
     font-family: myFam;
-   /*  margin: 0;
-    padding: 0; */
 }
 
 svg,img{
@@ -22,6 +20,8 @@ svg,img{
 body,html{
     max-height: 100vh;
     height: 100vh;
+    margin: 0;
+    padding: 0; 
 }
 
 body{
